--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.7.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.17.30",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@types/sentiment": "^5.0.4",
